# Code_sources

1_LBarros/ImpecBrainSeg_CLI/: README
1_LBarros/ImpecBrainSeg_CLI/Software/: CheckRes.py  ImageAnalysis.xml  ImpecBrainSeg_CLI.py
1_LBarros/ImpecBrainSeg_CLI/Software/out_BrainStructures/: out_BrainMask.nii  out_BrainStem.nii  out_Cerebelum.nii  out_OlfactoryBulb.nii  out_csf.nii  out_gm_all.nii  out_gm_cortex.nii  out_gm_subco.nii  out_hippo.nii  out_wm.nii
1_LBarros/ImpecBrainSeg_CLI/Software/out_CorticalRegions/: CortialRegions_Labels.txt
1_LBarros/ImpecBrainSeg_CLI/Template/CorticalRegions/: ITKSnap_AreasLabels.txt  ITKSnap_RegionsLabels.txt
1_LBarros/utilzreg-code/: CMakeLists.txt
1_LBarros/utilzreg-code/.svn/: wc.db
1_LBarros/utilzreg-code/DATA/: Brains3D_4mm_Src.nii  Potato2D_Src.nii
1_LBarros/utilzreg-code/applications/: uTIlzReg_GeoShoot.cc  uTIlzReg_LDDMM.cc  uTIlzReg_LDDMM_plain.cc
1_LBarros/utilzreg-code/lib/include/: Demons.h  Demons_plain.h  SciCalcPack.h
1_LBarros/utilzreg-code/lib/nifti/: CMakeLists.txt
1_LBarros/utilzreg-code/lib/src/: CMakeLists.txt  Demons.cc  LIDM.cc
1_LBarros/utilzreg-code/utilzreg_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake  uTIlzReg_Demons  uTIlzReg_Demons_plain  uTIlzReg_GeoShoot  uTIlzReg_LDDMM  uTIlzReg_LDDMM_plain  uTIlzReg_LIDM  uTIlzReg_Tools
1_LBarros/utilzreg-code/utilzreg_BUILD/lib/nifti/: Makefile  cmake_install.cmake
1_LBarros/utilzreg-code/utilzreg_BUILD/lib/nifti/niftilib/: Makefile  cmake_install.cmake
1_LBarros/utilzreg-code/utilzreg_BUILD/lib/nifti/znzlib/: Makefile  cmake_install.cmake
1_LBarros/utilzreg-code/utilzreg_BUILD/lib/src/: Makefile  cmake_install.cmake
